# rocky-mountain-forager

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
flashcards/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
flashcards/migrations/: 0001_initial.py
flashcards/templates/: answer.html  flashcards_form.html  flashcards_menu.html  game.html  score.html
flashcards/templatetags/: custom_filters.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: account.js  flashcards.js  library.js  login.js
frontend/src/navigation/: Navbar.js
frontend/src/scss/: custom.scss
frontend/src/services/: flashcards-service.js  library-service.js
rmf/: asgi.py  settings.py  urls.py  wsgi.py
rmf/fixtures/: data.yaml
