[tool.poetry]
name = "rmf"
version = "0.1.0"
description = """
Rocky Mountain Forager is an app that contains a library of edible and medicinal plants
of the Rocky Mountain region, as well as a flashcards game to aid memorization.
"""
authors = ["jim-a-jenkins <jimajenkins87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
Django = "3.2.8"
djangorestframework = "3.12.4"
django-cookie-consent = "0.2.6"
Pillow = "8.4.0"
python-dotenv = "0.19.1"
PyYAML = "6.0"

[tool.poetry.dev-dependencies]
django-stubs = "1.12.0"
djangorestframework-stubs = "1.7.0"

[tool.django-stubs]
django_settings_module = "rmf.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

